feat: 유저 API 구현
구현된 API
- POST /users
- DELETE /users
- POST /login
- POST /token-refresh

액세스 토큰은 일단 Basic Authentication으로 구현.
리프레시 토큰 API는 현재로선 더미 API.
앞으로 남은 기간 JWT + OAuth 구현에 집중 할 예정.
RDS 연동은 아직으로, 인메모리 DB로 테스트하는 단계.

Resolves #12

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 # server.port=5000
 spring.security.user.name=user
 spring.security.user.password=1234
+
+jwt.issuer=hbjw123@gmail.com
+jwt.secret_key=jwt_secret_key
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
