--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
-# server.port=5000
+server.port=${SERVER_PORT}
 spring.security.user.name=user
 spring.security.user.password=1234
 
-jwt.issuer=hbjw123@gmail.com
-jwt.secret_key=jwt_secret_key
+# spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+spring.datasource.username=${RDS_USERNAME}
+spring.datasource.password=${RDS_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
