--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-server.port=${SERVER_PORT}
+# server.port=5000
 spring.security.user.name=user
 spring.security.user.password=1234
 
-# spring.h2.console.enabled=true
-# spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
-spring.datasource.username=${RDS_USERNAME}
-spring.datasource.password=${RDS_PASSWORD}
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME}
+# spring.datasource.username=${RDS_USERNAME}
+# spring.datasource.password=${RDS_PASSWORD}
+spring.datasource.url=jdbc:mysql://awseb-e-3t6nq5ftte-stack-awsebrdsdatabase-bn9dnvoxnpg0.cg00hj2bpdpm.ap-northeast-2.rds.amazonaws.com:3306/ebdb?useSSL=false
+spring.datasource.username=user
+spring.datasource.password=user1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
